2009-09-12  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: Fixed to compile for AIX instant clients.
	    (reported by Kazuya Teramoto)

2009-05-17  KUBO Takehiro  <kubo@jiubao.org>
	* NEWS: add changes between 1.0.5 and 1.0.6.
	* VERSION: change version to 1.0.6.

2009-04-14  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: Gets ORACLE_HOME from the Windows regitry
	    by enumerating subkeys of \\HKEY_LOCAL_MACHINE\SOFTWARE\ORACLE.

2009-04-12  KUBO Takehiro  <kubo@jiubao.org>
	* lib/dbd/OCI8.rb: A data dictionary all_constraints doesn't have
	    index_name column on Oracle 8i or lower. Rewrite
	    DBI::DBD::OCI8::Database#column by using all_cons_columns.
	    (backport from ruby-oci8 trunk)

2009-04-12  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/extconf.rb, ext/oci8/oci8.h, ext/oci8/oraconf.rb:
	    fix a problem when compiling for Oracle 8.0.
	    (reported by Axel Reinhold as a ruby-oci8 2.0 issue)
	* lib/dbd/OCI8.rb: fix DBI::DBD::OCI8::BindType::DBIStatementHandle
	    to pass a newly added sanity check in dbi 0.4.1.
	    (reported by Dirk Herzhauser as a ruby-oci8 2.0 issue)
	* test/test_all.rb: fix to use dbi installed as a rubygem.

2009-03-17  KUBO Takehiro  <kubo@jiubao.org>
	* NEWS: add changes between 1.0.4 and 1.0.5.
	* VERSION: change version to 1.0.5.

2009-03-11  KUBO Takehiro  <kubo@jiubao.org>
	* oraconf.rb: fix big/little endian checking problem on Mac OS X ppc.
	    (contributed by unknown. See: Bug ID 24284 on rubyforge.)

2009-02-08  KUBO Takehiro  <kubo@jiubao.org>
	* NEWS: add changes between 1.0.3 and 1.0.4.
	* VERSION: change version to 1.0.4.
	* dist-files: add newly added file names which must be included
	    in gem or tar.gz packages.
	* metaconfig: follow the change of dbd/OCI8.rb location.

2009-02-01  KUBO Takehiro  <kubo@jiubao.org>
	* lib/dbd/OCI8.rb: add code for ruby-dbi 0.4 type conversion.
	* test/test_dbi.rb: suppress deprecated warnings while running
	    test_bind_dbi_data_type.